# shopping_AI

./: .gitignore  README.md  main.py  pyproject.toml
app/rag/: agent.py  edges.py  nodes.py  retriever.py  sql_tool.py
rag/: agent.py  edges.py  nodes.py  retriever.py  state.py
templates/: index.html
